[package]
name = "calder"
version = "0.1.0"
edition = "2021"
description = "c@lder Static Site Generator"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/jamolnng/calder"
documentation = "https://github.com/jamolnng/calder"
repository = "https://github.com/jamolnng/calder"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
