[package]
name = "calder"
version = "0.1.0"
edition = "2021"
description = "c@lder Static Site Generator"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/jamolnng/calder"
documentation = "https://github.com/jamolnng/calder"
repository = "https://github.com/jamolnng/calder"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
tera = "1.15.0"
pulldown-cmark = "0.9.1"
lazy_static = "1.4.0"
glob = "0.3.0"